# gpu-benchmarking

./: .gitignore  README.md  accl.py  accl_tim.py  analysis.ipynb  benchmark.py  benchmark_and_asyncaccl.py  config.yaml  config_gpu.yaml  config_mx3.yaml  generate_report.sh  google_sheet_api.py  gpu_auto_bench.py  gpu_auto_bench.yaml  gpu_benchmark.py  jetson-batch1.yml  kasa_reader.py  mx3_auto_bench.py  mx3_auto_bench.yaml  mx3_benchmark.py  mx_bench.py  mx_bench_test..py  mx_bench_test.py  onnx_fps.py  pmd_reader.py  post_process_timing.py  power_analysis.ipynb  prepare_onnx.py  query_kasa.py  quick_benchmark.py  requirements.txt
cpp/MX_API_src_pkg/samples/benchmark/: CMakeLists.txt  benchmark.cpp  post_processor.h
cpp/MX_API_src_pkg/samples/threadTest/: CMakeLists.txt  results.npy  sleep_test.py  threadTest.cpp
dfp_models/: model_0_yolov5n-SiLU-416_post.onnx  model_0_yolov5n-SiLU-640_post.onnx  model_0_yolov7-tiny-416_post.onnx  model_0_yolov7-tiny-640_post.onnx
